--- a/templates/main.html
+++ b/templates/main.html
@@ -310,6 +310,7 @@
 
         .inventory-item {
             background: #111827;
+            min-height: 90px;
             border-radius: 6px;
             padding: 6px;
             display: flex;
