--- a/templates/main.html
+++ b/templates/main.html
@@ -630,8 +630,7 @@ document.addEventListener('DOMContentLoaded', () => {
                     const div = document.createElement('div');
                     div.className = 'inventory-item';
 
-                    div.style.display = 'inline-block';
-
+                    div.style.display = 'flex';
 
                     div.innerHTML = `
                         <div class="select-box"></div>
