--- a/templates/main.html
+++ b/templates/main.html
@@ -199,7 +199,10 @@
             gap: 8px;
             width: 100%;
             min-height: 200px;
+            flex: 1;
+            overflow-y: auto;
         }
+
 
 
         .wallet-header {
@@ -775,16 +778,6 @@ document.addEventListener('DOMContentLoaded', () => {
         link.classList.remove('active');
         if (link.getAttribute('href') === currentPath) link.classList.add('active');
     });
-
-    document.querySelectorAll('.inventory-item').forEach(item => {
-        item.addEventListener('click', e => {
-            e.stopPropagation();
-
-            console.log(ToWithdraw)
-
-        });
-    });
-
 
     UpdateTotalValueLabel();
 });
